# corporate_research_agent

./: .dockerignore  .env.example  .geminiignore  .gitignore  Dockerfile.bot  GEMINI.md  README.md  docker-compose.yml  mcp_server_on_gemini.md  test.ipynb
.gemini/: GEMINI.md  settings.json
.gemini/skills/: corporate_search.md  fetch_page.md  ir_fetch.md  notion_add_company.md  notion_append_research.md  notion_search_company.md  notion_upsert_company.md  stock_code_search.md  tech_culture_search.md
.gemini/skills/company-research-workflow/: SKILL.md
.gemini/skills/corporate-search/: SKILL.md
.serena/: project.yml
agent/: Dockerfile.agent  api.py  config.py  pyproject.toml  test_notion.py  test_parent.py  test_search.py
agent/tests/: test_company_db_parity.py  test_normalize_financials.py
agent/tools/: __init__.py  logger.py
agent/tools/notion/: main.py  (+2 more)
bot/: Dockerfile.bot  bot.py  requirements.txt  session_db.py
mcp/: .dockerignore  Dockerfile  pyproject.toml
mcp/mcp_server/: __init__.py  main.py
mcp/tests/: gmail_search_smoke.py  notion_task_db_smoke.py  test_ask.py  test_company_db_get_content.py  test_ir_fetch.py
mcp/tools/IR_fetch/: __init__.py  main.py
mcp/tools/fetch_page/: main.py
mcp/tools/gmail_search/: main.py
mcp/tools/memory/: __init__.py  actions.py  client.py
mcp/tools/normalize_financials/: main.py
mcp/tools/notion/: company_db.py  episode_db.py  main.py  task_db.py
mcp/tools/notion/profiles/: company.json  episode.json  task.json
mcp/tools/stock_code_search/: __init__.py
mcp/tools/web_search/: __init__.py  main.py
(+21 files in other folders)
